--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@ text-align: center;
 <body>
     <div class="bg-dark text-secondary px-4 py-5 text-center">
         <div class="py-5">
-          <h1 class="display-5 fw-bold text-white">ALUMNI</h1>
+          <h1 class="display-5 fw-bold text-white">ALUMINI</h1>
           <div class="col-lg-6 mx-auto">
-            <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <p class="fs-5 mb-4"> 
+              <h1>"Welcome, [IIIT RAICHUR] Alumni!</h1> Reconnect with your alma mater on our Alumni Page. Dive into memories, celebrate successes, and stay updated on [University Name]'s web development community. Share your journey, explore events, and be a part of the global network. Your legacy is our pride, shaping the future of web development. Join us in fostering connections, inspiring the next generation, and making a lasting impact. Once a [University Name] graduate, always family. Welcome back to the heart of our distinguished alumni community!"</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-              <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-              <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
+              <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">KNOW MORE</button>
+              <button type="button" class="btn btn-outline-light btn-lg px-4">DETAIL</button>
             </div>
           </div>
         </div>
@@ -149,10 +150,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini 3.jpeg" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 3</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -160,10 +161,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini 4.jpg" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 4</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -178,10 +179,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini5.webp" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 5</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -189,10 +190,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini6.webp" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 6</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -201,10 +202,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini7.webp" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 7</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -212,10 +213,10 @@ text-align: center;
             <div class="card" style="width: 18rem;">
                 <h1></h1>
                 <div class="image-container" style="width: 100%; height: 300px; overflow: hidden;">
-                    <img src="./flower.avif" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
+                    <img src="photo/alumini8.webp" class="card-img-top image-class" alt="..." style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">ALUMNI 8</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary center-button">Detail</a>
                 </div>
@@ -235,7 +236,8 @@ text-align: center;
             "In a significant achievement for IIIT Raichur, one of its alumni secured a job offer with a remarkable annual package of 45 lakh rupees from Amazon. This accomplishment not only highlights the excellence of the institution but also showcases the potential and capabilities of the talented individuals nurtured by IIIT Raichur. It's a proud moment for the alumni, the institution, and the academic community as a whole Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus numquam quidem quibusdam pariatur, cum voluptatem vero praesentium doloribus veniam maiores ut sint eius, cumque esse beatae quam blanditiis laboriosam! Ab! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit iure amet quod. Eos quae voluptate accusantium reprehenderit nisi, illum veniam! Similique iusto ullam maxime reiciendis tempora commodi eaque? Provident, distinctio?</p>
        </div>
         <div class="col-md-5">
-            <img src="./flower.avif" alt="Image description">  
+          <img src="photo/adiy-transformed.jpeg" alt="Image description" style="width: 600px; height: 500px;">
+  
         </div>
       </div>
       <div style="height: 50px;"></div>
@@ -243,11 +245,10 @@ text-align: center;
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading"> abhijeet bhaiya <span class="text-muted"></span></h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+          <p class="lead">In an exceptional and inspiring accomplishment, abhijeet , a proud alumna of IIIT raichur, has brought distinction to her alma mater by securing a prestigious job offer with a lucrative annual package of 45 lakh rupees from amazon. This noteworthy feat not only showcases abhijeet's unwavering dedication and hard work but also highlights the outstanding education and training provided by iiit raichur.abhijeet's journey from being a student at the institution to achieving a coveted position at one of the tech giants sets an impressive example for current and future students. Her success speaks volumes about the rigorous academic curriculum and the invaluable guidance she received at iiit raichur. abhijeet's accomplishment is a testament to the institution's commitment to nurturing potential and talent. It's a moment of pride and celebration for both Priya Verma and IIT Indore, undoubtedly motivating numerous students to strive for excellence and pursue their dreams..</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img src="./flower.avif" alt="Image description">  
-        </div>
+          <img src="photo/abhijeetmumbai.jpeg" alt="Image description" style="width: 600px; height: 500px;">        </div>
       </div>
       <div style="height: 50px;"></div>
       <hr class="featurette-divider">
@@ -255,12 +256,11 @@ text-align: center;
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">kush bhaiya <span class="text-muted"></span></h2>
-          <p class="lead"> "In a remarkable and inspiring feat, Ksuh Bhaiya, an alumnus of IIIT Raichur, has made his alma mater proud by securing a prestigious job offer with a lucrative annual package of 45 lakh rupees from Amazon. This accomplishment not only reflects Ksuh's dedication and hard work but also underscores the high quality of education and training provided by IIIT Raichur. Ksuh's journey from being a student at the institution to landing a coveted position at one of the world's leading tech companies serves as a shining example to current and future students. His success is a testament to the rigorous academic curriculum and the guidance he received at IIIT Raichur. Ksuh's achievement also demonstrates the great potential and talent that the institution helps foster. It is a moment of celebration for both Ksuh Bhaiya and IIIT Raichur, and it's sure to inspire many aspiring students to aim for excellence and dream big in their academic and professional pursuits."</p>
+          <p class="lead"> In an exceptional and inspiring accomplishment, kusharg, a proud alumna of IIIT raichur, has brought distinction to her alma mater by securing a prestigious job offer with a lucrative annual package of 45 lakh rupees from Amazon. This noteworthy feat not only showcases kusharg's unwavering dedication and hard work but also highlights the outstanding education and training provided by IIIT raichur. kusharg's journey from being a student at the institution to achieving a coveted position at one of the tech giants sets an impressive example for current and future students. Her success speaks volumes about the rigorous academic curriculum and the invaluable guidance she received at IIIT raichur. kusharg's accomplishment is a testament to the institution's commitment to nurturing potential and talent. It's a moment of pride and celebration for both kusharg and IIIT raichur, undoubtedly motivating numerous students to strive for excellence and pursue their dream</p>
         </div>
         <div class="col-md-5">
           <!-- Replace the SVG with an actual image element -->
-          <img src="./flower.avif" alt="Image description">
-        </div>
+          <img src="photo/Screenshot_2023-11-19_191731-transformed.png" alt="Image description" style="width: 600px; height: 500px;">        </div>
       </div>
 
       <main>
